// Copyright 2017 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

// Service-level configuration for luci-notify.

syntax = "proto3";

package notify;

option go_package = "go.chromium.org/luci/luci_notify/api/config";

// Settings is the top-level configuration message.
message Settings {
  // Deprecated, no longer used. Retained only for compatibility
  // with existing configurations.
  string milo_host = 1;

  // luci_tree_status_host is the hostname of the LUCI tree status app
  // to use for closing and opening trees.
  //
  // e.g. treestatus.api.luci.app
  //
  // Required.
  string luci_tree_status_host = 2;
}
